--- a/MoodAnalyserProb/MoodAnalyserProb.csproj
+++ b/MoodAnalyserProb/MoodAnalyserProb.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CustomException.cs" />
     <Compile Include="MoodAnalyser.cs" />
+    <Compile Include="MoodAnalyserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
